--- a/makefile.inc
+++ b/makefile.inc
@@ -5,4 +5,5 @@ CODEROOT = ".."
 CC = g++
 
 #CPPFLAGS = -Wall -I$(CODEROOT) -O3  # maximal optimization
-CPPFLAGS = -Wall -I$(CODEROOT) -g     # with debugging info
+CPPFLAGS = -Wall -I$(CODEROOT) -g   -std=c++11  # with debugging info
+	
