Now begin Project 4

--- a/qe/makefile
+++ b/qe/makefile
@@ -10,9 +10,11 @@ libqe.a: libqe.a(qe.o)  # and possibly other .o files
 qe.o: qe.h
 
 qetest.o: qe.h
+mytest.o: qe.h
 
 # binary dependencies
 qetest: qetest.o libqe.a $(CODEROOT)/ix/libix.a $(CODEROOT)/rm/librm.a $(CODEROOT)/rbf/librbf.a
+mytest: mytest.o libqe.a $(CODEROOT)/ix/libix.a $(CODEROOT)/rm/librm.a $(CODEROOT)/rbf/librbf.a
 
 # dependencies to compile used libraries
 .PHONY: $(CODEROOT)/rbf/librbf.a
@@ -29,6 +31,6 @@ $(CODEROOT)/ix/libix.a:
 
 .PHONY: clean
 clean:
-	-rm qetest *.a *.o *~
+	-rm qetest mytest *.a *.o *~
 	$(MAKE) -C $(CODEROOT)/rm clean
 	$(MAKE) -C $(CODEROOT)/ix clean 
