--- a/rm/makefile
+++ b/rm/makefile
@@ -16,18 +16,24 @@ rmtest_2.o: rm.h test_util.h
 rmtest_extra.o: rm.h
 
 # binary dependencies
-rmtest_1: rmtest_1.o librm.a $(CODEROOT)/rbf/librbf.a
+rmtest_1: rmtest_1.o librm.a $(CODEROOT)/rbf/librbf.a $(CODEROOT)/ix/libix.a
 
-rmtest_2: rmtest_2.o librm.a $(CODEROOT)/rbf/librbf.a
+rmtest_2: rmtest_2.o librm.a $(CODEROOT)/rbf/librbf.a $(CODEROOT)/ix/libix.a
 
-rmtest_extra: rmtest_extra.o librm.a $(CODEROOT)/rbf/librbf.a
+rmtest_extra: rmtest_extra.o librm.a $(CODEROOT)/rbf/librbf.a $(CODEROOT)/ix/libix.a
 
 # dependencies to compile used libraries
 .PHONY: $(CODEROOT)/rbf/librbf.a
 $(CODEROOT)/rbf/librbf.a:
 	$(MAKE) -C $(CODEROOT)/rbf librbf.a
 
+.PHONY: $(CODEROOT)/ix/libix.a
+$(CODEROOT)/ix/libix.a:
+	$(MAKE) -C $(CODEROOT)/ix libix.a
+
+
 .PHONY: clean
 clean:
 	-rm rmtest_1 rmtest_2 rmtest_extra *.a *.o *~
 	$(MAKE) -C $(CODEROOT)/rbf clean
+	$(MAKE) -C $(CODEROOT)/ix clean 
